# zenzefi_client

./: .gitignore  API_USAGE_EXAMPLES.md  BUILD.md  CLAUDE.md  CLIENT_COOKIE_AUTH_MIGRATION.md  ZenzefiClient.spec  build_optimized.py  main.py  manifest.xml  pyproject.toml  version.txt
.claude/: settings.local.json
core/: auth_manager.py  certificate_manager.py  config_manager.py  device_id.py  nginx_manager.py  proxy_manager.py  startup_manager.py
core/proxy/: __init__.py  cache_manager.py  content_rewriter.py
proxy/: proxy_server.py
ui/: colors.py  health_indicator.py  icons.py  main_window.py  splash_screen.py  styles.py  theme_manager.py  tray_icon.py
utils/: port_utils.py  process_manager.py  single_instance.py  single_instance_file.py  single_instance_windows.py
