[project]
name = "zenzefi-client"
version = "0.1.0"
description = "Client for organizing a proxy connection with the Zenzefi server"
authors = [
    {name = "melxiory",email = "sibagatullinnail@gmail.com"}
]
license = {text = "GNU LESSER GENERAL PUBLIC LICENSE                       Version 2.1"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
