[project]
name = "zenzefi-client"
version = "0.1.0"
description = "Client for organizing a proxy connection with the Zenzefi server"
authors = [
    {name = "melxiory",email = "sibagatullinnail@gmail.com"}
]
license = {text = "GNU LESSER GENERAL PUBLIC LICENSE                       Version 2.1"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "cryptography (>=45.0.7,<46.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pyside6 (>=6.9.2,<7.0.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
    "aiohttp (>=3.13.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
